mobile captcha btn on mobile & fix exception

--- a/app/assets/stylesheets/mobile_page/login.scss
+++ b/app/assets/stylesheets/mobile_page/login.scss
@@ -96,3 +96,23 @@
   background-color: rgba(67,195,170,1);
   color: white;
 }
+.cap-inputs {
+  position: relative;
+  .send_mobile {
+    display: inline-block;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    padding: 0 10px;
+    background-color: #43c3aa;
+    color: white;
+    border-radius: 0 5px 5px 0;
+    box-sizing: border-box;
+    height: 34px;
+    overflow: hidden;
+    line-height: 34px;
+    &.disabled {
+      background-color: #ccc;
+    }
+  }
+}
